# tbChaSIn

./: .gitignore  Dockerfile  README.md  environment.yml  main.nf  nextflow_schema.json  pipeline.env  pyproject.toml  setup.py
.github/workflows/: check.yml  pythonpackage.yml
aws/: README.md  tbChaSIn-resources.yml
ci/: precommit.sh
docker/: .targets  Dockerfile  Dockerfile.snakemake
mamba/: dev.yml  fastqc.yml  fgbio.yml  multiqc.yml  picard.yml  tools.yml
scripts/: build_reference.sh  check.sh  cleanup_secrets.sh  docker.sh  mamba.sh  run_snakemake.sh
src/python/: pyproject.toml
src/python/pytomebio/core/: __init__.py  aligner.py  attachment_site.py  logging.py  sites.py
src/python/pytomebio/core/tests/: test_aligner.py  test_attachment_site_parsing.py
src/python/pytomebio/pipeline/: samples.py  snakemake_utils.py
src/python/pytomebio/pipeline/tests/: __init__.py  test_change_seq.py  test_cryptic_seq.py  test_durant.py  util.py
src/python/pytomebio/tools/: __main__.py
src/python/pytomebio/tools/change_seq/: collate_sites.py  fastq_to_bam.py  find_sites.py  trim_for_tn5me.py
src/python/pytomebio/tools/change_seq/tests/: test_fastq_to_bam.py  test_gapped_alignment.py
src/python/pytomebio/tools/common/: __init__.py  collate_sites.py
src/python/pytomebio/tools/cryptic_seq/: annotate_sites.py  create_config_from_metasheet.py  create_metasheet_from_benchling.py  create_v2_samplesheet.py  find_sites.py  resolve_references.py  trim_for_tn5me.py  trim_leading_attachment_site.py  trim_r1_tn5me.py  trim_r2.py  utils.py
src/python/pytomebio/tools/cryptic_seq/tests/: conftest.py  test_create_config_from_metasheet.py  test_create_metasheet_from_benchling.py  test_resolve_references.py  test_trim_for_tn5me.py  test_trim_r1_tn5me.py  test_trim_r2.py
src/python/pytomebio/tools/cryptic_seq/tests/data/: metasheet.txt  metasheet.xlsx
src/python/pytomebio/tools/durant/: filter_reads.py  find_sites.py  trim_leading_r2.py
(+24 files in other folders)
