[tool.poetry]
name = "pytomebio"
version = "0.0.1"
description = "Tools and APIs for off-target detection assays"
authors = ["Fulcrum Genomics <no-reply@fulcrumgenomics.com>"]
maintainers = ["Fulcrum Genomics <no-reply@fulcrumgenomics.com>"]
readme = "README.md"
repository = "https://github.com/tomebio/tbChaSIn"
classifiers=[
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
]
packages = [
    { include = "pytomebio", from = "src/python" }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
tomebio-tools = "pytomebio.tools.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
